force-app/main/default/objects/Recruitment_Opportunity_Prospect__c/Recruitment_Opportunity_Prospect__c.object-meta.xml
<CustomObject>
    <label>Recruitment Opportunity Prospect</label>
    <nameField>
        <label>Prospect Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recruitment Opportunity Prospects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>