force-app/main/default/objects/Recruitment_Opportunity_Prospect__c/fields/Call_Count__c.field-meta.xml
<CustomField>
    <fullName>Call_Count__c</fullName>
    <label>Call Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>