force-app/main/default/objects/Recruitment_Opportunity_Prospect__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Recruitment Opportunity Prospects</relationshipLabel>
    <relationshipName>Recruitment_Opportunity_Prospects</relationshipName>
    <type>Lookup</type>
</CustomField>