force-app/main/default/objects/Recruitment_Opportunity_Prospect__c/fields/Contractor_Recruitment_Profile__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Recruitment_Profile__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contractor Recruitment Profile</label>
    <referenceTo>Contractor_Recruitment__c</referenceTo>
    <relationshipLabel>Recruitment Opportunity Prospects</relationshipLabel>
    <relationshipName>Recruitment_Opportunity_Prospects</relationshipName>
    <type>Lookup</type>
</CustomField>