force-app/main/default/objects/Recruitment_Opportunity_Prospect__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <formula>IF(
NOT(ISBLANK(Contact__r.Email )),(Contact__r.Email), (Contractor_Recruitment_Profile__r.Email__c))</formula>
    <label>Email Address</label>
    <type>Text</type>
</CustomField>