force-app/main/default/objects/Recruitment_Opportunity_Prospect__c/fields/Prospect_Account__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Account__c</fullName>
    <formula>Contact__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>