force-app/main/default/objects/Recruitment_Opportunity_Prospect__c/fields/Prospect_Converted__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Converted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted</label>
    <type>Checkbox</type>
</CustomField>