force-app/main/default/objects/Recruitment_Opportunity_Prospect__c/fields/Recruitment_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_Opportunity__c</fullName>
    <label>Recruitment Opportunity</label>
    <referenceTo>Recruitment_Opportunity__c</referenceTo>
    <relationshipLabel>Associated Prospects</relationshipLabel>
    <relationshipName>Recruitment_Opportunity_Prospects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>